# Drift

./: README.md  pyproject.toml
.github/workflows/: drift.yml
drift/: __init__.py  cli.py  main.py  models.py
drift/baseline/: __init__.py  baseline_manager.py
drift/engine/: __init__.py  ai_engine.py  architecture_builder.py  drift_engine.py  rule_engine.py  validation_engine.py
drift/github/: __init__.py  pr_comment.py
drift/parser/: __init__.py  compose_parser.py  json_parser.py  k8s_parser.py  terraform_parser.py
drift/report/: __init__.py  markdown_report.py  rich_output.py  sarif.py
examples/: architecture.json  main.tf
samples/: deployment.yaml  docker-compose.yml
